--- a/corso/Guerrini/html/HTML5Application/public_html/index.html
+++ b/corso/Guerrini/html/HTML5Application/public_html/index.html
@@ -49,6 +49,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <input id="tanno" min= "1990" max= "2027"type="number" name="anno" placeholder="inserire anno"> <br>
                     <input id="tanno" min= "1990" max= "2027"type="range" name="anno" placeholder="inserire anno"> <br>
                     <input id="tdata" min= "1990" max= "2027"type="date" name="data" placeholder="inserire anno"> <br>
+                    sesso <br> maschio<input type="radio" name="sex" value="maschio"><br>
+                    femmina<input type="radio" name="sex" value="femmina"><br>
+                    sesso ceck<br> maschio<input type="checkbox" name="sex" value="maschio"><br>
+                    femmina<input type="checkbox" name="sex" value="femmina"><br>
                     <textarea id="tcommento" name="commento" rows="5" cols="100"placeholder="ins. commento"></textarea><br>
                     <select id="spv" name="pv" size="4">
                         <option value = "TO" > Torino</option>
