--- a/corso/Guerrini/html/HTML5Application/public_html/index.html
+++ b/corso/Guerrini/html/HTML5Application/public_html/index.html
@@ -13,14 +13,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <style>
             * {
 
-                border-width: 1px;
-                border-color: black;
-                border-style: solid;
+                font-face{
+                font-family: titolo;
+                scr:url("fonts/sacramento-regoular.tff");
 
 
             }
 
         </style>
+        <link rel="sansation" href="js/script.js"
 
     </head>
     <body>
