--- a/corso/Guerrini/html/HTML5Application/public_html/index.html
+++ b/corso/Guerrini/html/HTML5Application/public_html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <!--
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
@@ -8,20 +8,21 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <title>Prova html5</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="js/script.js"></script>        
-        <link rel="stylesheet" href="css/style.css"/> 
+        <script src="js/script.js"></script> 
+        <link rel="stylesheet" href="js/script.js">
+        
         <style>
             * {
 
                 font-face{
-                font-family: titolo;
+                font-family: sansation;
                 scr:url("fonts/sacramento-regoular.tff");
 
 
             }
 
         </style>
-        <link rel="sansation" href="js/script.js"
+        <link rel="stylesheet" href="css/style.css"/> 
 
     </head>
     <body>
