--- a/corso/Guerrini/html/welcomedog/public_html/index.html
+++ b/corso/Guerrini/html/welcomedog/public_html/index.html
@@ -12,7 +12,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         
-        <header id="menu" > <div class="vertical-menu">
+        <header id="menu" style="background-color: fuchsia"> <div class="vertical-menu">
   <a href="home" class="active">Home</a>
   <a href="https://www.lacodablu.com/servizi-per-cani/">servizi</a>
   <a href="https://www.doggysplash.it/">divertimento</a> 
@@ -39,7 +39,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 </p>
             </div>
         <div class="fondo">
-        <footer style="background-color: pink">
+        <footer >
             <img  src="img/fotofooter.jpg" alt=""/>
             <span><a  href="https://www.ormadimaya.it/contatti/">contatti</a> </span>            
         </footer>
